--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,5 +6,20 @@
 </head>
 <body>
     <h1 th:text="'List of Owners'">Index Page</h1>
+
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+            </tr>
+        </thead>
+        <tr th:each="owner : ${owners}">
+            <td th:text="${owner.getId()}">1</td>
+            <td th:text="${owner.getFirstName()}">Joe</td>
+            <td th:text="${owner.getLastName()}">Buck</td>
+        </tr>
+    </table>
 </body>
 </html>
