--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -6,5 +6,20 @@
 </head>
 <body>
     <h1 th:text="'List of Vets'">Index Page</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tr th:each="vet : ${vets}">
+            <td th:text="${vet.getId()}">1</td>
+            <td th:text="${vet.getFirstName()}">Joe</td>
+            <td th:text="${vet.getLastName()}">Buck</td>
+        </tr>
+    </table>
 </body>
 </html>
