--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -11,14 +11,16 @@
         <thead>
         <tr>
             <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th>Name</th>
+            <th>Specialty</th>
         </tr>
         </thead>
         <tr th:each="vet : ${vets}">
             <td th:text="${vet.getId()}">1</td>
-            <td th:text="${vet.getFirstName()}">Joe</td>
-            <td th:text="${vet.getLastName()}">Buck</td>
+            <td th:text="${vet.getFirstName()} + ' ' + ${vet.getLastName()}">Joe</td>
+            <td>
+                <span th:each="specialty : ${vet.getSpecialties()}" th:text="${specialty.getDescription()}"></span>
+            </td>
         </tr>
     </table>
 </body>
